Changes to be committed: 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -21,24 +21,24 @@
             <div class="board-area">
                 <div class="table">
                     <div class="row" id="r0">
-                        <div class="column num-2" id="r0c0">2</div>
-                        <div class="column num-4" id="r0c1">4</div>
+                        <div class="column" id="r0c0"></div>
+                        <div class="column" id="r0c1"></div>
                         <div class="column" id="r0c2"></div>
-                        <div class="column num-2" id="r0c3">2</div>
+                        <div class="column" id="r0c3"></div>
                         <div class="column" id="r0c4"></div>
                     </div>
                     <div class="row" id="r1">
-                        <div class="column num-2" id="r1c0">2</div>
-                        <div class="column num-8" id="r1c1">8</div>
+                        <div class="column" id="r1c0"></div>
+                        <div class="column" id="r1c1"></div>
                         <div class="column" id="r1c2"></div>
-                        <div class="column num-2" id="r1c3">2</div>
+                        <div class="column" id="r1c3"></div>
                         <div class="column" id="r1c4"></div>
                     </div>
                     <div class="row" id="r2">
                         <div class="column" id="r2c0"></div>
                         <div class="column" id="r2c1"></div>
                         <div class="column" id="r2c2"></div>
-                        <div class="column num-16" id="r2c3">16</div>
+                        <div class="column" id="r2c3"></div>
                         <div class="column" id="r2c4"></div>
                     </div>
                     <div class="row" id="r3">
@@ -49,10 +49,10 @@
                         <div class="column" id="r3c4"></div>
                     </div>
                     <div class="row" id="r4">
-                        <div class="column num-8" id="r4c0">8</div>
+                        <div class="column" id="r4c0"></div>
                         <div class="column" id="r4c1"></div>
                         <div class="column" id="r4c2"></div>
-                        <div class="column num-8" id="r4c3">8</div>
+                        <div class="column" id="r4c3"></div>
                         <div class="column" id="r4c4"></div>
                     </div>
                 </div>
@@ -61,6 +61,7 @@
         <div class="button-area">
             <button id="startBtn">Start</button>
             <button id="retryBtn">Retry</button>
+            <button id="clearBtn">Clear</button>
         </div>
     </div>
     <script src="./btnClickEvent.js"></script>
